--- a/src/main/resources/templates/childSelectPage.html
+++ b/src/main/resources/templates/childSelectPage.html
@@ -5,79 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아이 프로필 선택</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/sidebar.css" rel="stylesheet">
     <style>
-        body {
-            overflow-x: hidden;
-        }
-
-        .navbar {
-            background-color: #47688d;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .navbar-nav .nav-link {
-            color: white !important;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #c4d6e9 !important;
-        }
-
-        #sidebar {
-            height: 100%;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: -250px;
-            background-color: #f7f7f7;
-            color: black;
-            transition: left 0.3s ease;
-            padding-top: 20px;
-            z-index: 1000;
-        }
-
-        #sidebar a {
-            padding: 15px;
-            text-decoration: none;
-            font-size: 18px;
-            color: black;
-            display: block;
-            transition: background-color 0.2s;
-        }
-
-        #sidebar a:hover {
-            background-color: #e0e0e0;
-        }
-
-        #sidebar a:first-child {
-            margin-top: 35px;
-        }
-
-        #toggleSidebar {
-            font-size: 24px;
-            cursor: pointer;
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            z-index: 1100;
-            transition: left 0.3s ease;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .sidebar-active {
-            left: 0;
-        }
-
-        .toggle-active {
-            left: 265px;
-        }
-
-        #main-content {
-            transition: margin-left 0.3s ease;
-        }
-
         .profile-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -149,21 +78,9 @@
     <a href="#">카테고리 별 책보기</a>
     <a href="/lottery/form">선착순 이벤트</a>
 </div>
+<script src="/assets/js/sidebar.js"></script>
 
-<script>
-    document.getElementById('toggleSidebar').addEventListener('click', function() {
-        const sidebar = document.getElementById('sidebar');
-        const toggleBtn = document.getElementById('toggleSidebar');
 
-        if (sidebar.style.left === '0px') {
-            sidebar.style.left = '-250px';
-            toggleBtn.classList.remove('toggle-active');
-        } else {
-            sidebar.style.left = '0px';
-            toggleBtn.classList.add('toggle-active');
-        }
-    });
-</script>
 
 <div class="container mt-5">
     <div class="row justify-content-center">
