--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -467,25 +467,8 @@
     renderBooks(popularBooks, 'newBooks');
 
 
-    // 사이드바 토글 기능
-    document.getElementById('toggleSidebar').addEventListener('click', function() {
-        const sidebar = document.getElementById('sidebar');
-        const toggleBtn = document.getElementById('toggleSidebar');
-        const mainContent = document.getElementById('main-content');
-
-        // 사이드바 가시성 전환
-        if (sidebar.style.left === '0px') {
-            sidebar.style.left = '-250px'; // 사이드바 숨기기
-            toggleBtn.classList.remove('toggle-active'); // 버튼 원래대로
-            mainContent.style.marginLeft = '150px'; // 콘텐츠를 중앙으로 이동
-        } else {
-            sidebar.style.left = '0px'; // 사이드바 보이기
-            toggleBtn.classList.add('toggle-active'); // 버튼 함께 이동
-            mainContent.style.marginLeft = '250px';
-        }
-    });
-
 </script>
+<script src="/assets/js/sidebar.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
