--- a/src/main/resources/templates/childUpdate.html
+++ b/src/main/resources/templates/childUpdate.html
@@ -165,7 +165,7 @@
   <a href="/children/">아이정보 보기</a>
   <a href="/userpage">계정보기</a>
   <a href="#">최근 책 보기</a>
-  <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
+  <a href="/templates/BookCategoryHtml.html">좋아요 누른 책 보기</a>
   <a href="#">카테고리 별 책보기</a>
   <a href="/lottery/form">선착순 이벤트</a>
 </div>
