--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -225,9 +225,9 @@
     <a href="#">아이 프로필 변경</a>
     <a href="#">아이정보 보기</a>
     <a href="/userpage">계정보기</a>
-    <a href="#">최근 책 보기</a>
-    <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
-    <a href="#">카테고리 별 책보기</a>
+    <a href="/ChildRecentReadBook">최근 책 보기</a>
+    <a href="/ChildFavorBookList">좋아요 누른 책 보기</a>
+    <a href="/BookCategoryHtml">카테고리 별 책보기</a>
     <a href="/lottery/form">선착순 이벤트</a>
 </div>
 
