--- a/src/main/resources/templates/childPage.html
+++ b/src/main/resources/templates/childPage.html
@@ -104,7 +104,7 @@
                                          class="img-fluid rounded-circle"
                                          style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
-                                <p th:text="${child.childName}">김승환</p>
+                                <p th:text="${child.childName}"></p>
                             </a>
                         </div>
                         <div class="text-center">
