--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -87,22 +87,34 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar">
     <div class="container-fluid">
+        <!-- Toggle Button -->
         <span id="toggleSidebar" class="navbar-toggler-icon"></span>
+
+        <!-- Right-Side Links -->
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">메인페이지</a>
+                    <a class="nav-link" href="/">메인페이지</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">로그인</a>
+                <!-- 로그인 상태 확인 -->
+                <li class="nav-item" th:if="${admin == null}">
+                    <a class="nav-link" href="/login">로그인</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">회원가입</a>
+                <!-- 로그인한 사용자 정보 -->
+                <li class="nav-item" th:if="${admin != null}">
+                    <a class="nav-link" th:text="${admin.adminName + '님'}"></a>
+                </li>
+                <li class="nav-item" th:if="${admin != null}">
+                    <a class="nav-link" href="/admin/signup">관리자 추가</a>
+                </li>
+                <li class="nav-item" th:if="${admin != null}">
+                    <a class="nav-link" href="/admin/logout">로그아웃</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
 
 <!-- Sidebar -->
 <div id="sidebar">
